# dstack-cloud

./: .gitignore  Cargo.toml  README.md  REUSE.toml  prek.toml  run-tests.sh
.github/workflows/: docker-build-check.yml  gateway-release.yml  kms-release.yml  prek-check.yml  simulator-release.yml  verifier-release.yml
basefiles/: dstack-prepare.sh
basefiles/sysctl.d/: 99-dstack.conf
cc-eventlog/src/: codecs.rs  runtime_events.rs
cert-client/src/: lib.rs
certbot/: Cargo.toml
certbot/src/: acme_client.rs  bot.rs  dns01_client.rs  http_client.rs  lib.rs
ct_monitor/src/: main.rs
docs/: auth-simple-operations.md  bridge-networking.md  deployment.md  encrypted-env-spec.md
docs/tutorials/: README.md  attestation-verification.md  blockchain-setup.md  clone-build-dstack-vmm.md  contract-deployment.md  dns-configuration.md  docker-setup.md  gateway-build-configuration.md  gateway-service-setup.md  gramine-key-provider.md  guest-image-setup.md  haproxy-setup.md  hello-world-app.md  kms-build-configuration.md  kms-cvm-deployment.md  local-docker-registry.md  management-interface-setup.md  rust-toolchain-installation.md  ssl-certificate-setup.md  system-baseline-dependencies.md  tdx-bios-configuration.md  tdx-sgx-verification.md  tdx-software-installation.md  troubleshooting-dstack-installation.md  troubleshooting-first-application.md  troubleshooting-gateway-deployment.md  troubleshooting-host-setup.md  troubleshooting-kms-deployment.md  troubleshooting-prerequisites.md  vmm-configuration.md  vmm-service-setup.md
dstack-attest/: Cargo.toml
dstack-attest/src/: attestation.rs  lib.rs  v1.rs
dstack-attest/tests/: nitro_verify.rs
dstack-util/src/: main.rs  system_setup.rs
gateway/: Cargo.toml  gateway.toml
gateway/docs/: cluster-deployment.md
gateway/dstack-app/: bootstrap-cluster.sh  deploy-to-vmm.sh  docker-compose.yaml
gateway/dstack-app/builder/: Dockerfile  build-image.sh  entrypoint.sh
gateway/dstack-app/builder/shared/: pinned-packages.txt
gateway/rpc/proto/: gateway_rpc.proto
gateway/src/: admin_service.rs  cert_store.rs  config.rs  debug_service.rs  distributed_certbot.rs  gen_debug_key.rs  main.rs  main_service.rs  models.rs  proxy.rs  web_routes.rs
gateway/src/kv/: https_client.rs  mod.rs  sync_service.rs
gateway/src/main_service/: tests.rs
gateway/src/main_service/snapshots/: dstack_gateway__main_service__tests__config-2.snap  dstack_gateway__main_service__tests__config.snap
gateway/src/proxy/: tls_passthough.rs  tls_terminate.rs
gateway/src/web_routes/: wavekv_sync.rs
gateway/templates/: dashboard.html
gateway/test-run/: .env.example  .gitignore  cluster.sh  test_certbot.sh  test_suite.sh
gateway/test-run/e2e/: docker-compose.yml  pebble-config.json  run-e2e.sh  test.sh
gateway/test-run/e2e/configs/: gateway-1.toml  gateway-2.toml  gateway-3.toml
guest-agent/: dstack.toml
guest-agent-simulator/: Cargo.toml  dstack-simulator.service  dstack.toml  install-systemd.sh  package-release.sh
guest-agent-simulator/src/: main.rs  simulator.rs
guest-agent/src/: backend.rs  config.rs  guest_api_service.rs  lib.rs  main.rs  rpc_service.rs  server.rs
key-provider-build/: Dockerfile.key-provider
kms/: kms.toml
kms/auth-eth/: foundry-cast-cheatsheet.md  hardhat.config.ts  package-lock.json  package.json
kms/auth-eth-bun/: package.json
kms/auth-mock/: package.json
kms/auth-simple/: README.md  auth-config.example.json  index.test.ts  (+2 more)
port-forward/: Cargo.toml
port-forward/src/: lib.rs  tcp.rs  udp.rs
scripts/: add-spdx-attribution.py  dhcp-notify.sh  dstack-image-oci.sh  setup-bridge.sh
vmm/: Cargo.toml  build.rs  requirements.txt  vmm.toml
(+83 files in other folders)
