# SPDX-FileCopyrightText: © 2024-2025 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: BUSL-1.1

[package]
name = "dstack-gateway"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arc-swap.workspace = true
rocket = { workspace = true, features = ["mtls", "json"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
ipnet = { workspace = true, features = ["serde"] }
fs-err.workspace = true
clap = { workspace = true, features = ["derive", "string"] }
shared_child.workspace = true
tokio = { workspace = true, features = ["full"] }
rustls.workspace = true
tokio-rustls = { workspace = true, features = ["ring"] }
rinja.workspace = true
hex.workspace = true
parcelona.workspace = true
hickory-resolver.workspace = true
pin-project.workspace = true
serde_json.workspace = true
rand.workspace = true
git-version.workspace = true
ra-rpc = { workspace = true, features = ["client", "rocket"] }
dstack-gateway-rpc.workspace = true
certbot.workspace = true
bytes.workspace = true
safe-write.workspace = true
smallvec.workspace = true
futures.workspace = true
cmd_lib.workspace = true
load_config.workspace = true
dstack-kms-rpc.workspace = true
ra-tls.workspace = true
dstack-guest-agent-rpc.workspace = true
http-client = { workspace = true, features = ["prpc"] }
sha2.workspace = true
dstack-types.workspace = true
serde-duration.workspace = true
reqwest = { workspace = true, features = ["json"] }
hyper = { workspace = true, features = ["server", "http1"] }
hyper-util = { workspace = true, features = ["tokio"] }
hyper-rustls.workspace = true
http-body-util.workspace = true
x509-parser.workspace = true
jemallocator.workspace = true
wavekv.workspace = true
tdx-attest.workspace = true
flate2.workspace = true
uuid = { workspace = true, features = ["v4"] }
rmp-serde.workspace = true
or-panic.workspace = true
base64.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["resource"] }

[[bin]]
name = "gen_debug_key"
path = "src/gen_debug_key.rs"

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
